# tetris-ml

./: .gitignore  Makefile  README.md  pyproject.toml  tetris-model.onnx
checkpoints_cnn/: best_model.pt  latest.pt
models/: best_model.pt
scripts/: export_onnx.py
tetris/: board_sim.py  board_sim_c.c  cnn_model.py  distill.py  env.py  evaluate.py  model.py  train.py  train_cnn.py  watch.py
