[project]
name = "tetris-ml"
version = "0.1.0"
description = "Tetris AI trained with PPO reinforcement learning"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "tetris-gymnasium>=0.3.0",
    "gymnasium>=0.29",
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[tool.setuptools.packages.find]
include = ["tetris*"]

[project.scripts]
train = "tetris.train:main"
watch = "tetris.watch:main"
evaluate = "tetris.evaluate:main"
plot = "tetris.plot:main"
train-cnn = "tetris.train_cnn:main"
